Update image url

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 Välkommen att fira mig på min födelsedag.</h1>
 
 <p>Här följer lite praktisk information om tillställningen: 
-<img src="_MG_3354.gif" alt="rakbastu">
+<img src="https://raw.githubusercontent.com/larshedlund/larshedlund.github.io/master/rakbastu.gif" alt="rakbastu" class="inline"/>
 
       <footer class="site-footer">
 
