--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Jag Fyller 30</h1>
-      <img src="https://raw.githubusercontent.com/larshedlund/larshedlund.github.io/master/rakbastu.gif" alt="rakbastu" class="inline"/>
-      <h2 class="project-tagline">Jag = Lars</h2>
+      <h1 class="project-name">Jag Fyller 30!</h1>
     </section>
 
     <section class="main-content">
       <h1>
 Välkommen att fira mig på min födelsedag.</h1>
-
+<img src="https://raw.githubusercontent.com/larshedlund/larshedlund.github.io/master/rakbastu.gif" alt="rakbastu" class="inline"/>
 <p>Här följer lite praktisk information om tillställningen: 
 
 
