Update image url to jagfyller30 picture

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="main-content">
-      <img src="https://raw.githubusercontent.com/larshedlund/larshedlund.github.io/master/rakbastukul.gif" alt="rakbastu" class="inline"/>
+      <img src="https://raw.githubusercontent.com/larshedlund/larshedlund.github.io/master/jagfyller30.gif" alt="rakbastubilder" class="inline"/>
       <h1>
 Hej och hjärtligt välkomna till mitt 30 års X!</h1>
 <P></P>
