--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <section class="main-content">
       <img src="https://raw.githubusercontent.com/larshedlund/larshedlund.github.io/master/jagfyller30.gif" alt="rakbastubilder" class="inline"/>
       <h1>
-Hej och hjärtligt välkomna till mitt 30 års X!</h1>
+Hjärtligt välkomna på mitt 30-års Kalas!</h1>
 <P></P>
-Då vi snart befinner oss i mitten av Y har jag bestämt att det blir en grillfest som slutar i dans på klassiskt landsbygdsmanér. 
+Då vi snart befinner oss i mitten av X har jag bestämt att det blir en Y som slutar i dans på klassiskt landsbygdsmanér. 
 <P></P>
 Fördrinken serveras kl 17.  
 <P></P>
-Plats för festen är Granhälla bygdegård i Valö soken. För er som är utom soknes och vill hitta sovplats kan det lösas. Pensionatet kanske har öppet :) . 
+Plats för festen är Granhälla bygdegård i Valö soken. För er som är utomsoknes och vill hitta sovplats kan det lösas. Pensionatet kanske har öppet :) . 
 <P></P>
-Tid för festen sammanfaller med dagen före min fördelsedag, lördagen den 13 Y. 
+Tid för festen sammanfaller med dagen före min fördelsedag, lördagen den 13 X. 
 <P></P>
 Klä er som ni vill, jag ska ha kavaj, jag fyller f**f** år! 
 <P></P>
-Anmäl er gärna innan Y genom att skicka mig ett sms/email eller Z..
+Anmäl er gärna innan X genom att skicka mig ett sms/email eller Z..
  <P></P>
 Väl mött! 
 <P></P>
