--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Då vi snart befinner oss i mitten av X har jag bestämt att det blir en Y som s
 <P></P>
 Fördrinken serveras kl 17.  
 <P></P>
-Plats för festen är Granhälla bygdegård i Valö soken. För er som är utomsoknes och vill hitta sovplats kan det lösas. Pensionatet kanske har öppet :) . 
+Plats för festen är Granhälla bygdegård i Valö socken. För er som är utomsocknes och vill hitta sovplats kan det lösas. Pensionatet kanske har öppet :) . 
 <P></P>
 Tid för festen sammanfaller med dagen före min fördelsedag, lördagen den 13 X. 
 <P></P>
