--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Larshedlund.GitHub.io</h1>
-      <h2 class="project-tagline">Jag fyller 30!</h2>
+      <h2 class="project-tagline">Jag  30!</h2>
     </section>
 
     <section class="main-content">
