--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
   </head>
   <body>
     <section class="main-content">
-      <h1>Nu är vi snart där!</h1>
+      <h1>Inte långt kvar nu...</h1>
 <P></P>
-<img src="Erik.png" alt="Erik i kavaj">
+	<h1>Tack för alla gratulationer och fina upptåg på förhand!</h1> 
 <P></P>
-Tack på förhand för alla gratulationer och fina upptåg. 
+	<img src="Erik.png" alt="Erik i kavaj">
 <P></P>
-Mer info kommer... under uppbyggnad
+under uppbyggnad... Mer info kommer... 
 <P></P>
-<img src="underconstruction.gif" alt="Under uppbyggnad">
+
+	<img src="underconstruction.gif" alt="Under uppbyggnad">
 
 <P></P>
       <footer class="site-footer">
-        <span class="site-footer-credits">host: github.com</span>
+        <span class="site-footer-credits">All kredit till Github</span>
       </footer>
     </section>
   </body>
