Style update index.html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <section class="main-content">
       <h1>Inte långt kvar nu...</h1>
 <P></P>
-	<h1>Tack för alla gratulationer och fina upptåg på förhand!</h1> 
+	<h2>Tack för alla gratulationer och fina upptåg på förhand!</h2> 
 <P></P>
 	<img src="Erik.png" alt="Erik i kavaj">
 <P></P>
-under uppbyggnad... Mer info kommer... 
+	<h3>Sidan under uppbyggnad... </h3>
 <P></P>
 
 	<img src="underconstruction.gif" alt="Under uppbyggnad">
