--- a/index.html
+++ b/index.html
@@ -11,20 +11,38 @@
   </head>
   <body>
     <section class="main-content">
-      <h1>Inte långt kvar nu...</h1>
-<P></P>
-	<h2>Tack för alla gratulationer och fina upptåg på förhand!</h2> 
+
+<style>
+body {
+  background-image: url('bgballon.gif');
+}
+</style>
+	<h2>Nu blir det KALAS - jag fyller ju 30!</h2> 
+	<h3>Tack f&oumlr alla gratulationer och fina uppt&aringg på f&oumlrhand!</h3> 
 <P></P>
 	<img src="Erik.png" alt="Erik i kavaj">
 <P></P>
-	<h3>Sidan under uppbyggnad... </h3>
-<P></P>
-
-	<img src="underconstruction.gif" alt="Under uppbyggnad">
 
 <P></P>
+	<h2>Information om Kalaset</h2>
+
+	<h3>Var: Granh&aumllla Byggdeg&aringrd i Val&ouml</h3>
+	
+	<img src="Granhallamap.png" alt="Granhälla karta">
+ 	<!--<img src="Granhalla.jpg" alt="Granhälla">-->
+
+	<h3>N&aumlr: L&oumlrdag den 25 april 2020</h3>
+	<h3>Hur: I Flanellskjorta</h3>
+	<img src="flannel.gif" alt="Skjorta">
+	<h3>F&oumlr: Vuxna (=Barnfritt)</h3>
+	<h3>Varf&oumlr: Jag vill fira min 30&aringrs dag med er!</h3>
+	<img src="party2.gif" alt="party">
+	<h3>G&oumlra: H&oumlr av er om ni inte kommer</h3>
+	<h3>Presentf&oumlrslag: Bidrag till Festen/Jaktresa (Swish/Kontanter)</h3>
+<P></P>
+
       <footer class="site-footer">
-        <span class="site-footer-credits">All kredit till Github</span>
+        <span class="site-footer-credits">Tack Github och Bror Lars</span>
       </footer>
     </section>
   </body>
