--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@ body {
   background-image: url('bgballon.gif');
 }
 </style>
-	<h2>Nu blir det KALAS - jag fyller ju 30!</h2> 
+	<h2>Framskjuten Fest :(</h2> 	
+	<h3>D&aring jag &aumlr om&aringttligt modern vill jag f&oumllja med Corona-str&oumlmmen och skjuta upp detta firande.</h3>
+	<h3>Det &aumlr allts&aring inte p&aring grund av att jag inte vill tr&aumlffa er.</h3>
+	<h3>&Aringterkommer i god tid om ny tid och plats. Under tiden kan ni kolla vad jag har haft f&oumlr mig f&oumlr 10-15 &aringr sedan:</h3>
+	<h3><a href="http://www.xn--eriktrettir-68a.se/vedsidan/">Min Hemsida - Obs ej mobilanpassad</a></h3>
+<P></P>
 	<h3>Tack f&oumlr alla gratulationer och fina uppt&aringg på f&oumlrhand!</h3> 
 <P></P>
 	<img src="Erik.png" alt="Erik i kavaj">
@@ -31,7 +36,7 @@ body {
 	<img src="Granhallamap.png" alt="Granhälla karta">
  	<!--<img src="Granhalla.jpg" alt="Granhälla">-->
 
-	<h3>N&aumlr: L&oumlrdag den 25 april 2020</h3>
+	<h3>N&aumlr: 2020</h3>
 	<h3>Hur: I Flanellskjorta</h3>
 	<img src="flannel.gif" alt="Skjorta">
 	<h3>F&oumlr: Vuxna (=Barnfritt)</h3>
