--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@ body {
   background-image: url('bgballon.gif');
 }
 </style>
-	<h2>Framskjuten Fest :(</h2> 	
-	<h3>D&aring jag &aumlr om&aringttligt modern vill jag f&oumllja med Corona-str&oumlmmen och skjuta upp detta firande.</h3>
-	<h3>Det &aumlr allts&aring inte p&aring grund av att jag inte vill tr&aumlffa er.</h3>
-	<h3>&Aringterkommer i god tid om ny tid och plats. Under tiden kan ni kolla vad jag har haft f&oumlr mig f&oumlr 10-15 &aringr sedan:</h3>
-	<h3><a href="http://www.xn--eriktrettir-68a.se/vedsidan/">Min Hemsida - Obs ej mobilanpassad</a></h3>
+	<h2>Fest!!! - 14 Maj</h2> 	
+	<h3>D&aring jag &aumlr om&aringttligt modern har jag som alla andra inv&antat Coronan i 2&aringr.</h3>
+	<h3>F&oumlr att ladda inf&oumlr festen kan ni kolla vad jag gjorde f&oumlr 10-15 &aringr sedan:</h3>
+	<h3><a href="http://www.erik-30-31-32.se/vedsidan/">Min Hemsida - Obs ej mobilanpassad</a></h3>
 <P></P>
 	<h3>Tack f&oumlr alla gratulationer och fina uppt&aringg på f&oumlrhand!</h3> 
 <P></P>
@@ -36,11 +35,11 @@ body {
 	<img src="Granhallamap.png" alt="Granhälla karta">
  	<!--<img src="Granhalla.jpg" alt="Granhälla">-->
 
-	<h3>N&aumlr: 2020</h3>
+	<h3>N&aumlr: 2022-5-14</h3>
 	<h3>Hur: I Flanellskjorta</h3>
 	<img src="flannel.gif" alt="Skjorta">
-	<h3>F&oumlr: Vuxna (=Barnfritt)</h3>
-	<h3>Varf&oumlr: Jag vill fira min 30&aringrs dag med er!</h3>
+	<h3>F&oumlr: Vem som, barn som vuxna och d&ar emellan</h3>
+	<h3>Varf&oumlr: Jag vill fira min 30-31-32&aringrs dag med er!</h3>
 	<img src="party2.gif" alt="party">
 	<h3>G&oumlra: H&oumlr av er om ni inte kommer</h3>
 	<h3>Presentf&oumlrslag: Bidrag till Festen/Jaktresa (Swish/Kontanter)</h3>
