--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 }
 </style>
 	<h2>Fest!!! - 14 Maj</h2> 	
-	<h3>D&aring jag &aumlr om&aringttligt modern har jag som alla andra inv&antat Coronan i 2&aringr.</h3>
+	<h3>D&aring jag &aumlr om&aringttligt modern har jag som alla andra inv&aumlntat Coronan i 2&aringr.</h3>
 	<h3>F&oumlr att ladda inf&oumlr festen kan ni kolla vad jag gjorde f&oumlr 10-15 &aringr sedan:</h3>
 	<h3><a href="http://www.erik-30-31-32.se/vedsidan/">Min Hemsida - Obs ej mobilanpassad</a></h3>
 <P></P>
@@ -38,7 +38,7 @@ body {
 	<h3>N&aumlr: 2022-5-14</h3>
 	<h3>Hur: I Flanellskjorta</h3>
 	<img src="flannel.gif" alt="Skjorta">
-	<h3>F&oumlr: Vem som, barn som vuxna och d&ar emellan</h3>
+	<h3>F&oumlr: Vem som, barn som vuxna och d&aumlr emellan</h3>
 	<h3>Varf&oumlr: Jag vill fira min 30-31-32&aringrs dag med er!</h3>
 	<img src="party2.gif" alt="party">
 	<h3>G&oumlra: H&oumlr av er om ni inte kommer</h3>
